manifest/kubernetes/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-management
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: rabbitmq-management.kubeop.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: rabbitmq-management
              port:
                number: 15672
  tls:
  - hosts:
    - rabbitmq-management.kubeop.com
    secretName: kubeop.com-ssl
